cabal-version:       2.4

name:                blog-hs
version:             0.1.0.0
synopsis:            A custom blog generator from markup files
description:         This package provides a static blog generator 
                     from a custom markup format to HTML.
                     It defines a parse for the custom markup format as well
                     as an html pretty printer EDSL.

                     It is used as the example project in the online book
                     'Lean Haskell Blog Generator'. See README for more details.
                     Copy of the blog by noordahx to learn Haskell fundamentals by example.
homepage:            https://github.com/noordahx/blog.hs
bug-reports:         https://github.com/noordahx/blog.hs/issues
license:             BSD-3-Clause
license-file:        LICENSE.txt
author:              Nurdaulet Taumergenov
maintainer:          taumergenov@duck.com
category:            Learning, Web
extra-doc-files:
  README.md

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library
  import: common-settings
  hs-source-dirs: src
  build-depends:
      base
    , directory
  exposed-modules:
    BlogHs
      BlogHs.Convert
      BlogHs.Html
        BlogHs.Html.Internal
      BlogHs.Markup
  -- other-modules:

executable blog-hs-gen
  import: common-settings
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base
    , blog-hs
  ghc-options:
    -O
